test/data/resolver/valid/union_all_writes_all_writes.cypher
CREATE (a:Person) UNION ALL CREATE (b:Post)
