test/data/resolver/invalid/union_writes_vs_returns_column_count.cypher
CREATE (a:Person) UNION MATCH (b:Post) RETURN b
